java/iot3mobility: make MAPEM and SPATEM models compatible with Java 8
Fix: .toList() (Java 16) → .collect(Collectors.toList())

Signed-off-by: Mathieu LEFEBVRE <mathieu1.lefebvre@orange.com>